--- a/clients/web/package.json
+++ b/clients/web/package.json
@@ -19,8 +19,10 @@
     "@auth0/nextjs-auth0": "^3.5.0",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@types/dompurify": "^3.0.5",
     "@types/lodash-es": "^4.17.12",
     "clsx": "^2.0.0",
+    "dompurify": "^3.2.7",
     "dotenv": "^17.2.2",
     "framer-motion": "^12.23.12",
     "graphql": "^16.8.1",
