--- a/clients/web/package.json
+++ b/clients/web/package.json
@@ -19,7 +19,14 @@
     "@auth0/nextjs-auth0": "^3.5.0",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@tiptap/extension-bold": "^3.6.5",
+    "@tiptap/extension-bubble-menu": "^3.6.5",
+    "@tiptap/extension-code": "^3.6.5",
+    "@tiptap/extension-italic": "^3.6.5",
+    "@tiptap/extension-link": "^3.6.5",
     "@tiptap/extension-placeholder": "^3.6.5",
+    "@tiptap/extension-strike": "^3.6.5",
+    "@tiptap/extension-underline": "^3.6.5",
     "@tiptap/pm": "^3.6.5",
     "@tiptap/react": "^3.6.5",
     "@tiptap/starter-kit": "^3.6.5",
